// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month #render renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    key="1437955200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    key="1438560000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    key="1439164800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    key="1439769600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    key="1440374400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    key="1440979200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when \`_selectionInProgress\` is \`true\` and prop \`rangeLimit\` is defined renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    key="1437955200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    key="1438560000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    key="1439164800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    key="1439769600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    key="1440374400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    key="1440979200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`disableDaysOfWeek\` is defined renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    key="1437955200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    key="1438560000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    key="1439164800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    key="1439769600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    key="1440374400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    key="1440979200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`disabledIntervals\` is \`[]\` renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    disabledIntervals={Array []}
    key="1437955200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    disabledIntervals={Array []}
    key="1438560000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    disabledIntervals={Array []}
    key="1439164800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    disabledIntervals={Array []}
    key="1439769600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    disabledIntervals={Array []}
    key="1440374400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    disabledIntervals={Array []}
    key="1440979200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`minDate\` and \`maxDate\` are defined when prop \`rangeLimit\` doesn't exceed \`minDate\` and \`maxDate\` renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    key="1437955200000"
    maxDate={2015-08-23T00:00:00.000Z}
    minDate={2015-08-12T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    key="1438560000000"
    maxDate={2015-08-23T00:00:00.000Z}
    minDate={2015-08-12T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    key="1439164800000"
    maxDate={2015-08-23T00:00:00.000Z}
    minDate={2015-08-12T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    key="1439769600000"
    maxDate={2015-08-23T00:00:00.000Z}
    minDate={2015-08-12T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    key="1440374400000"
    maxDate={2015-08-23T00:00:00.000Z}
    minDate={2015-08-12T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    key="1440979200000"
    maxDate={2015-08-23T00:00:00.000Z}
    minDate={2015-08-12T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`minDate\` and \`maxDate\` are defined when prop \`rangeLimit\` exceed \`minDate\` and \`maxDate\` renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    key="1437955200000"
    maxDate={2015-08-31T00:00:00.000Z}
    minDate={2015-08-01T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    key="1438560000000"
    maxDate={2015-08-31T00:00:00.000Z}
    minDate={2015-08-01T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    key="1439164800000"
    maxDate={2015-08-31T00:00:00.000Z}
    minDate={2015-08-01T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    key="1439769600000"
    maxDate={2015-08-31T00:00:00.000Z}
    minDate={2015-08-01T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    key="1440374400000"
    maxDate={2015-08-31T00:00:00.000Z}
    minDate={2015-08-01T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-17T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    key="1440979200000"
    maxDate={2015-08-31T00:00:00.000Z}
    minDate={2015-08-01T00:00:00.000Z}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`minNumberOfWeeks\` is defined when prop \`activeMonth\` has less weeks than defined renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-01T00:00:00.000Z}
    key="1264982400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-08T00:00:00.000Z}
    key="1265587200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-15T00:00:00.000Z}
    key="1266192000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-22T00:00:00.000Z}
    key="1266796800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-03-01T00:00:00.000Z}
    key="1267401600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`minNumberOfWeeks\` is defined when prop \`activeMonth\` has more weeks than as defined renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    key="1437955200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    key="1438560000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    key="1439164800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    key="1439769600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    key="1440374400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    key="1440979200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`minNumberOfWeeks\` is defined when prop \`activeMonth\` has the same number of weeks as defined renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-01T00:00:00.000Z}
    key="1433116800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-08T00:00:00.000Z}
    key="1433721600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-15T00:00:00.000Z}
    key="1434326400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-22T00:00:00.000Z}
    key="1434931200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-29T00:00:00.000Z}
    key="1435536000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`month\` has 4 weeks renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-01T00:00:00.000Z}
    key="1264982400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-08T00:00:00.000Z}
    key="1265587200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-15T00:00:00.000Z}
    key="1266192000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2010-02-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2010-02-22T00:00:00.000Z}
    key="1266796800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`month\` has 5 weeks renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-01T00:00:00.000Z}
    key="1433116800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-08T00:00:00.000Z}
    key="1433721600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-15T00:00:00.000Z}
    key="1434326400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-22T00:00:00.000Z}
    key="1434931200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-06-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-06-29T00:00:00.000Z}
    key="1435536000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;

exports[`Month #render when prop \`month\` has 6 weeks renders <Month /> 1`] = `
<div
  className="example-class-month"
>
  <DaysOfWeek
    blockClassName="example-class"
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-07-27T00:00:00.000Z}
    key="1437955200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-03T00:00:00.000Z}
    key="1438560000000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-10T00:00:00.000Z}
    key="1439164800000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-17T00:00:00.000Z}
    key="1439769600000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-24T00:00:00.000Z}
    key="1440374400000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
  <Week
    activeMonth={2015-08-15T00:00:00.000Z}
    blockClassName="example-class"
    date={2015-08-31T00:00:00.000Z}
    key="1440979200000"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    today={2015-08-17T00:00:00.000Z}
    weekStartsOn={1}
  />
</div>
`;
